# WPI-game-jam-2020

./: .gitignore  CMakeLists.txt  README.md
Trains/nbproject/: build-impl.xml  genfiles.properties  project.xml
include/: common.hpp  config.h.in
include/core/: Entity.hpp  Scene.hpp  game.hpp  net.hpp
include/game/: City.hpp  Rail.hpp  Train.hpp
include/math/: v2d.hpp
include/net/: client.hpp  common.hpp  connection.hpp  message.hpp  server.hpp
include/scenes/: gameworld.hpp  menu.hpp
include/utils/: distance.hpp  upnp.hpp
libs/ENet/: Makefile.in  configure
libs/ENet/docs/html/: Downloads.html  FAQ.html  FAQ_8dox.html  Features.html  IRCChannel.html  Installation.html  License.html  MailingList.html  Tutorial.html  annotated.html  callbacks_8c.html  callbacks_8h.html  compress_8c.html  design_8dox.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fd6c3a2b8754f03ff2a62b53108cf6e2.html  enet_8h.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_m.html  globals_s.html  globals_type.html  group__Address.html  group__Packet.html  group__callbacks.html  group__global.html  group__host.html  group__list.html  group__peer.html  group__private.html  group__socket.html  host_8c.html  index.html  install_8dox.html  license_8dox.html  list_8c.html  (+44 more)
libs/ENet/lib/: CMakeCache.txt  Makefile  cmake_install.cmake
libs/KiWi/src/: KW_eventwatcher.c  KW_gui.c  gameworld.cpp
libs/imgui/misc/single_file/: imgui_single_file.h
libs/miniupnpc-2.1/: upnpcommands.c
src/: Client.cpp  Menu.cpp  Server.cpp  game.cpp  gameworld.cpp  main.cpp
src/utils/: upnp.cpp
